--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
                <nav class="header-nav">
                    <ul class="list header-list">
                      <li class="header-item"><a class="link header-link" href="./index.html">Студия</a></li>
-                     <li class="header-item"><a class="link header-link" href=""> <div class="text">Портфолио</div></a></li>
+                     <li class="header-item"><a class="link header-link current" href=""> <div class="text">Портфолио</div></a></li>
                      <li class="header-item"><a class="link header-link" href="">Контакты</a></li>
                    </ul>
                </nav>
@@ -64,63 +64,117 @@
                 <div class="container">
                    <ul class="list list-portfolio">
                        <li class="card-portfolio">
-                           <img src="./img/laptop.jpg" alt="открытый ноутбук" width="370">
+                           <div class="portfolio-item-wrap">
+                              <img src="./img/laptop.jpg" alt="открытый ноутбук" width="370">
+                              <p class="portfolio-img-text"> Технокряк это современная площадка распространения коронавируса. 
+                                   Компании используют эту платформу для цифрового
+                                  шпионажа и атак на защищённые сервера конкурентов.
+                               </p>
+                            </div>
                            <div class="card-title-portfolio">
                                <h3 class="card-title">Технокряк</h3>
                                <p class="card-after-title">Веб-сайт</p>
                            </div>
                        </li>
                        <li class="card-portfolio">
-                           <img src="./img/basketball.jpg" alt="два баскетболиста" width="370">
+                           <div class="portfolio-item-wrap">
+                               <img src="./img/basketball.jpg" alt="два баскетболиста" width="370">
+                                <p class="portfolio-img-text"> Технокряк это современная площадка распространения коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                            <div class="card-title-portfolio">
                                <h3  class="card-title">Постер<span lang="en">New Orlean vs Golden Star</span></h3>
                                <p class="card-after-title">Дизайн</p>
                            </div>
                        </li>
                        <li class="card-portfolio">
-                           <img src="./img/restaurant.jpg" alt="вывеска ресторана" width="370">
+                           <div class="portfolio-item-wrap">
+                               <img src="./img/restaurant.jpg" alt="вывеска ресторана" width="370">
+                                <p class="portfolio-img-text"> Технокряк это современная площадка распространения коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                            <div class="card-title-portfolio">
                                <h3 class="card-title">Ресторан <span lang="en">Seafood</span></h3>
                                <p class="card-after-title">Приложение</p>
                            </div>
                        </li>
                        <li class="card-portfolio">
-                           <img src="./img/headphones.jpg" alt="чёрные наушники" width="370">
+                           <div class="portfolio-item-wrap">
+                               <img src="./img/headphones.jpg" alt="чёрные наушники" width="370">
+                                <p class="portfolio-img-text"> Технокряк это современная площадка распространения коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                            <div class="card-title-portfolio">
                                <h3 class="card-title">Проект <span lang="en">Prime</span></h3>
                                <p class="card-after-title">Маркетинг</p>
                            </div>
                        </li>
                        <li class="card-portfolio">
-                           <img src="./img/boxes.jpg" alt="белая и серая коробки" width="370">
+                           <div class="portfolio-item-wrap">
+                               <img src="./img/boxes.jpg" alt="белая и серая коробки" width="370">
+                                <p class="portfolio-img-text"> Технокряк это современная площадка распространения коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                            <div class="card-title-portfolio">
                                <h3 class="card-title">Проект <span lang="en">Boxes</span></h3>
                                <p class="card-after-title">Приложение</p>
                            </div>
                        </li>
                        <li class="card-portfolio">
-                           <img src="./img/monitor.jpg" alt="монитор эпл" width="370">
+                           <div class="portfolio-item-wrap">
+                               <img src="./img/monitor.jpg" alt="монитор эпл" width="370">
+                                <p class="portfolio-img-text"> Технокряк это современная площадка распространения коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                            <div class="card-title-portfolio">
                                <h3 class="card-title" lang="en">Inspiration has no Borders</h3>
                                <p class="card-after-title">Веб-сайт</p>
                            </div>
                        </li>
                        <li class="card-portfolio">
-                           <img src="./img/book.jpg" alt="открытая книга" width="370">
+                           <div class="portfolio-item-wrap">
+                               <img src="./img/book.jpg" alt="открытая книга" width="370">
+                                <p class="portfolio-img-text"> Технокряк это современная площадка распространения коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                            <div class="card-title-portfolio">
                                <h3 class="card-title">Издание <span lang="en">Limited Edition</span></h3>
                                <p class="card-after-title">Дизайн</p>
                            </div>
                        </li>
                        <li class="card-portfolio">
-                           <img src="./img/tag.jpg" alt="бирка на одежду" width="370">
+                           <div class="portfolio-item-wrap">
+                               <img src="./img/tag.jpg" alt="бирка на одежду" width="370">
+                                <p class="portfolio-img-text"> Технокряк это современная площадка распространения коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                            <div class="card-title-portfolio">
                                <h3 class="card-title">Проект <span lang="en">LAB</span></h3>
                                <p class="card-after-title">Маркетинг</p>
                            </div>
                        </li>
                        <li class="card-portfolio">
-                           <img src="./img/work-laptop.jpg" alt="ноутбук" width="370">
+                           <div class="portfolio-item-wrap">
+                               <img src="./img/work-laptop.jpg" alt="ноутбук" width="370">
+                                <p class="portfolio-img-text"> Технокряк это современная площадка распространения коронавируса.
+                                    Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                            <div class="card-title-portfolio">
                               <h3 class="card-title" lang="en">Growing Business</h3>
                               <p class="card-after-title">Приложение</p>
